[package]
name = "rfuss"
version = "0.1.0"
authors = ["Michal Melewski <michal.melewski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
linux-personality = "1.0"
rand = "0.8.0"
clap = "2.33.3"